tests/cases/fail/dict_union_type.p4
def main() -> None:
    table: dict[str, str] | str = dict_str_str()
